Improve Docker-first onboarding (#104)